step 2 with errors. not finish it

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>angualr2 starter webpack</title>
 </head>
 <body>
+  <div><button onClick="document.location.reload(true)">reload plunker (without changing the rul)</button></div>
+
   <my-app>Loading...</my-app>
+  <div id="statetree" style="position: fixed; right: 0; top: 0;"></div>
 </body>
 </html>
